--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,13 +7,6 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
-@book{burke1826works,
-  title={The works of the right honourable Edmund Burke},
-  author={Burke, Edmund},
-  volume={4},
-  year={1826},
-  publisher={Wells and Lilly}
-}
 @article{elsasser2023political,
   title={Political Inequality in Rich Democracies},
   author={Els{\"a}sser, Lea and Sch{\"a}fer, Armin},
@@ -272,7 +265,7 @@
 }
 @article{pilet2023politicians,
   title={Do Politicians Outside the United States Also Think Voters Are More Conservative than They Really Are?},
-  author={Pilet, Jean-Beno{\^\i}t and Sheffer, Lior and Helfer, Luzia and VARONE, FREDERIC and VLIEGENTHART, RENS and WALGRAVE, STEFAAN},
+  author={Pilet, Jean-Benoit and Sheffer, Lior and Helfer, Luzia and Varone, Frederic and Vliegenthart, Rens and Walgrave, Stefaan},
   journal={American Political Science Review},
   pages={1--9},
   year={2023},
@@ -289,7 +282,7 @@ doi = {https://doi.org/10.1016/j.ejpoleco.2023.102404},
 url = {https://www.sciencedirect.com/science/article/pii/S0176268023000484},
 author = {Mélyne Nzabonimpa},
 keywords = {Local politics, Gender economics, Canadian municipal elections, Canada, Incumbency, Politician persistence},
-abstract = {I analyze the difference in the persistence of men and women after an electoral loss and in their incumbency advantage, using data from the Canadian Municipal Elections Database. I find strong deterrence and incumbency effects among both men and women, but no evidence of a significant gender heterogeneity. Men are 14.9 to 16.6 percentage points less likely to re-enter politics after an electoral loss, while women are 11.8 to 14.3 percentage points less likely to do so. Moreover, incumbent male candidates are 5.8 percentage points more likely to win the next election, while female candidates are 5.6 percentage points more likely to win again. The findings have important implications for program and policy development at the municipal and provincial levels, and assist in the understanding of the roles played by political and electoral institutions in shaping elections’ outcomes.}
+abstract = {I analyze the difference in the persistence of men and women after an electoral loss and in their incumbency advantage, using data from the Canadian Municipal Elections Database. I find strong deterrence and incumbency effects among both men and women, but no evidence of a significant gender heterogeneity. Men are 14.9 to 16.6 percentage points less likely to re-enter politics after an electoral loss, while women are 11.8 to 14.3 percentage points less likely to do so. Moreover, incumbent male candidates are 5.8 percentage points more likely to win the next election, while female candidates are 5.6 percentage points more likely to win again. The findings have important implications for program and policy development at the municipal and provincial levels, and assist in the understanding of the roles played by political and electoral institutions in shaping elections' outcomes.}
 }
 @article{Rasmussen2021,
 	title        = {Organised interests in the media and policy congruence: The contingent impact of the status quo},
@@ -2239,13 +2232,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	number       = 1,
 	pages        = {7--23}
 }
-@book{Dahl1971,
-	title        = {{Participation and Opposition}},
-	author       = {Dahl, Robert A.},
-	year         = 1971,
-	publisher    = {Yale University Press},
-	address      = {New Haven, CT}
-}
+
 @book{dahlerup2017has,
 	title        = {{Has Democracy Failed Women?}},
 	author       = {Dahlerup, Drude},
@@ -2998,6 +2985,30 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	number       = 2,
 	pages        = {264--280}
 }
+@book{dahl1971polyarchy,
+  title={Polyarchy: Participation and opposition},
+  author={Dahl, Robert A},
+  year={1971},
+  publisher={Yale University Press}
+}
+@article{mansbridge2003rethinking,
+  title={Rethinking representation},
+  author={Mansbridge, Jane},
+  journal={American political science review},
+  volume={97},
+  number={4},
+  pages={515--528},
+  year={2003},
+  publisher={Cambridge University Press}
+}
+@book{burke1826works,
+  title={The works of the right honourable Edmund Burke},
+  author={Burke, Edmund},
+  volume={4},
+  year={1826},
+  publisher={Wells and Lilly}
+}
+
 @article{freeman1996explaining,
 	title        = {{Explaining Variation in Casework Among State Legislators}},
 	author       = {Freeman, Patricia K and Richardson Jr, Lilliard E},
@@ -3008,7 +3019,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 }
 @article{Frynas2015,
 	title        = {Political corporate social responsibility: Reviewing theories and setting new agendas},
-	author       = {Frynas, J{\k{e}}drzej George and Stephens, Si{\^a}n},
+	author       = {Frynas, J{\k{e}}drzej George and Stephens, Sian},
 	year         = 2015,
 	journal      = {International Journal of Management Reviews},
 	publisher    = {Wiley Online Library},
@@ -4086,6 +4097,34 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	publisher    = {Knopf},
 	address      = {New York}
 }
+@article{weissberg1978collective,
+  title={Collective vs. dyadic representation in Congress},
+  author={Weissberg, Robert},
+  journal={American Political Science Review},
+  volume={72},
+  number={2},
+  pages={535--547},
+  year={1978},
+  publisher={Cambridge University Press}
+}
+@article{eulau1977puzzle,
+  title={The puzzle of representation: Specifying components of responsiveness},
+  author={Eulau, Heinz and Karps, Paul D},
+  journal={Legislative Studies Quarterly},
+  pages={233--254},
+  year={1977},
+  publisher={JSTOR}
+}
+@article{harden2013multidimensional,
+  title={Multidimensional Responsiveness: The Determinants of Legislators' Representational Priorities},
+  author={Harden, Jeffrey J},
+  journal={Legislative Studies Quarterly},
+  volume={38},
+  number={2},
+  pages={155--184},
+  year={2013},
+  publisher={Wiley Online Library}
+}
 @book{Key1961,
 	title        = {{Public Opinion and American Democracy}},
 	author       = {Key, V. O., Jr.},
@@ -4422,6 +4461,16 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	publisher    = {Springer},
 	pages        = {1--9}
 }
+@article{hagemann2017government,
+  title={Government responsiveness in the European Union: Evidence from Council voting},
+  author={Hagemann, Sara and Hobolt, Sara B and Wratil, Christopher},
+  journal={Comparative Political Studies},
+  volume={50},
+  number={6},
+  pages={850--876},
+  year={2017},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
 @book{lawless2005takes,
 	title        = {{It Takes a Candidate: Why Women Don't Run for Office}},
 	author       = {Lawless, Jennifer L and Fox, Richard L},
@@ -4518,6 +4567,22 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	volume       = 79,
 	number       = 2,
 	pages        = {485--501}
+}
+@book{dalton2017participation,
+  title={The participation gap: Social status and political inequality},
+  author={Dalton, Russell J},
+  year={2017},
+  publisher={Oxford University Press}
+}
+@article{marien2010inequalities,
+  title={Inequalities in non-institutionalised forms of political participation: A multi-level analysis of 25 countries},
+  author={Marien, Sofie and Hooghe, Marc and Quintelier, Ellen},
+  journal={Political studies},
+  volume={58},
+  number={1},
+  pages={187--213},
+  year={2010},
+  publisher={SAGE Publications Sage UK: London, England}
 }
 @book{levendusky2009partisan,
 	title        = {{The Partisan Sort: How Liberals Became Democrats and Conservatives Became Republicans}},
@@ -5624,6 +5689,16 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	publisher    = {Jstor},
 	pages        = {357--384}
 }
+@article{franklin1997responsive,
+  title={The responsive public: issue salience, policy change, and preferences for European unification},
+  author={Franklin, Mark N and Wlezien, Christopher},
+  journal={Journal of Theoretical Politics},
+  volume={9},
+  number={3},
+  pages={347--363},
+  year={1997},
+  publisher={Sage Publications 6 Bonhill Street, London EC2A 4PU, UK}
+}
 @book{poole2000congress,
 	title        = {{Congress: A Political-Economic History of Roll Call Voting}},
 	author       = {Poole, Keith T and Rosenthal, Howard},
@@ -5636,29 +5711,18 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	year         = 2017,
 	publisher    = {Routledge}
 }
+
+@book{mayhew2004congress,
+  title={Congress: The electoral connection},
+  author={Mayhew, David R},
+  year={2004},
+  publisher={Yale University Press}
+}
 @book{poole2017ideology,
 	title        = {{Ideology \& Congress: A Political Economic History of Roll Call Voting}},
 	author       = {Poole, Keith T and Rosenthal, Howard},
 	year         = 2017,
 	publisher    = {Routledge}
-}
-@book{powell2000elections,
-	title        = {{Elections as Instruments of Democracy: Majoritarian and Proportional Visions}},
-	author       = {Powell, G Bingham and Powell Jr, G Bingham},
-	year         = 2000,
-	publisher    = {Yale University Press}
-}
-@book{powell2000elections,
-	title        = {{Elections as Instruments of Democracy: Majoritarian and Proportional Visions}},
-	author       = {Powell Jr., G Bingham},
-	year         = 2000,
-	publisher    = {Yale University Press}
-}
-@book{powell2000elections,
-	title        = {{Elections as Instruments of Democracy: Majoritarian and Proportional Visions}},
-	author       = {Powell, G Bingham and Powell Jr, G Bingham},
-	year         = 2000,
-	publisher    = {Yale University Press}
 }
 @book{powell2000elections,
 	title        = {{Elections as Instruments of Democracy: Majoritarian and Proportional Visions}},
@@ -6514,6 +6578,15 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	journal      = {Current Psychology},
 	publisher    = {Springer},
 	pages        = {1--11}
+}
+@article{urbinati2008concept,
+  title={The concept of representation in contemporary democratic theory},
+  author={Urbinati, Nadia and Warren, Mark E},
+  journal={Annu. Rev. Polit. Sci.},
+  volume={11},
+  pages={387--412},
+  year={2008},
+  publisher={Annual Reviews}
 }
 @article{steffen2021influence,
 	title        = {{The Influence of Gain-Loss Framing and Its Interaction With Political Ideology on Social Distancing and Mask Wearing Compliance During the Covid-19 Pandemic}},
