--- a/assets/references.bib
+++ b/assets/references.bib
@@ -16,6 +16,65 @@
   year={2023},
   publisher={Annual Reviews}
 }
+@article{oesch2008explaining,
+  title={Explaining workers' support for right-wing populist parties in Western Europe: Evidence from Austria, Belgium, France, Norway, and Switzerland},
+  author={Oesch, Daniel},
+  journal={International Political Science Review},
+  volume={29},
+  number={3},
+  pages={349--373},
+  year={2008},
+  publisher={Sage Publications Sage UK: London, England}
+}
+@article{kriesi2014populist,
+  title={The populist challenge},
+  author={Kriesi, Hanspeter},
+  journal={West European Politics},
+  volume={37},
+  number={2},
+  pages={361--378},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+@article{saward2006representative,
+  title={The representative claim},
+  author={Saward, Michael},
+  journal={Contemporary Political Theory},
+  volume={5},
+  pages={297--318},
+  year={2006},
+  publisher={Springer}
+}
+@article{mutz2018status,
+  title={Status threat, not economic hardship, explains the 2016 presidential vote},
+  author={Mutz, Diana C},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={115},
+  number={19},
+  pages={E4330--E4339},
+  year={2018},
+  publisher={National Acad Sciences}
+}
+@article{rehfeld2009representation,
+  title={Representation rethought: on trustees, delegates, and gyroscopes in the study of political representation and democracy},
+  author={Rehfeld, Andrew},
+  journal={American Political Science Review},
+  volume={103},
+  number={2},
+  pages={214--230},
+  year={2009},
+  publisher={Cambridge University Press}
+}
+@article{mansbridge2011clarifying,
+  title={Clarifying the concept of representation},
+  author={Mansbridge, Jane},
+  journal={American Political Science Review},
+  volume={105},
+  number={3},
+  pages={621--630},
+  year={2011},
+  publisher={Cambridge University Press}
+}
 @article{walgrave2022revisiting,
   title={Revisiting Elite Perceptions as Mediator of Elite Responsiveness to Public Opinion},
   author={Walgrave, Stefaan and Soroka, Stuart and Loewen, Peter and Sheafer, Tamir and Soontjens, Karolin},
