--- a/assets/references.bib
+++ b/assets/references.bib
@@ -6318,6 +6318,16 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
   year={2007},
   publisher={Taylor \& Francis}
 }
+@article{hanretty2021members,
+  title={Members of parliament are minimally accountable for their issue stances (and they know it)},
+  author={Hanretty, Chris and Mellon, Jonathan and English, Patrick},
+  journal={American Political Science Review},
+  volume={115},
+  number={4},
+  pages={1275--1291},
+  year={2021},
+  publisher={Cambridge University Press}
+}
 @article{schakel2021unequal,
 	title        = {{Unequal Policy Responsiveness in the Netherlands}},
 	author       = {Schakel, Wouter},
