--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,16 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@online{Deane2021,
+   author = {Claudia Deane and Kim Parker and John Gramlich},
+   institution = {Pew Research Center},
+   journal = {Pew Research Center},
+   month = {3},
+   title = {{A Year of U.S. Public Opinion on the Coronavirus Pandemic}},
+   url = {https://www.pewresearch.org/2021/03/05/a-year-of-u-s-public-opinion-on-the-coronavirus-pandemic/},
+   urldate = {2022-04-04},
+   year = {2021},
+}
 @article{elsasser2023political,
   title={Political Inequality in Rich Democracies},
   author={Els{\"a}sser, Lea and Sch{\"a}fer, Armin},
@@ -6965,16 +6975,6 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	journal      = {Politico},
         note = {Accessed on: 2022-04-04},
 	url         = {https://www.politico.com/news/2020/11/05/pelosi-covid-testing-congress-434399}
-}
-@online{Deane2021,
-	title        = {{A Year of U.S. Public Opinion on the Coronavirus Pandemic}},
-	author       = {Claudia Deane and Kim Parker and John Gramlich},
-	year         = 2021,
-	month        = 3,
-	journal      = {Pew Research Center},
-        url =       {https://www.pewresearch.org/2021/03/05/a-year-of-u-s-public-opinion-on-the-coronavirus-pandemic/},
-	note         = {{Accessed on: 2022-04-04}},
-	institution  = {Pew Research Center}
 }
 @online{NPR2022,
 	title        = {{State of the Union attendees needed a COVID test. 6 legislators tested positive}},
