--- a/assets/references.bib
+++ b/assets/references.bib
@@ -467,7 +467,7 @@ abstract = {I analyze the difference in the persistence of men and women after a
 	day          = {01},
 	publisher    = {US Department of Health and Human Services},
         url = {https://covid.cdc.gov/covid-data-tracker},
-	note         = {Accessed on: 2022-02-20}
+        urldate = {2022-02-20}
 }
 @book{guo2015power,
 	title        = {{The power of information networks: New directions for agenda setting}},
@@ -482,12 +482,13 @@ abstract = {I analyze the difference in the persistence of men and women after a
 	publisher    = {SocArXiv}
 }
 @online{LeBlanc2020,
-	title        = {Republican Lawmakers who Downplayed Coronavirus Concerns Face Backlash over Early Vaccinations - CNNPolitics},
+	title        = {Republican Lawmakers who Downplayed Coronavirus Concerns Face Backlash over Early Vaccinations}, 
+  publisher = {CNNPolitics},
 	author       = {Paul LeBlanc},
 	year         = 2020,
 	journal      = {CNN},
-        url =    {https://edition.cnn.com/2020/12/21/politics/vaccine-lawmakers-backlash/index.html. Accessed on: 2022-01-06},
-	note         = {{Accessed on: 2022-01-06}}
+  url =    {https://edition.cnn.com/2020/12/21/politics/vaccine-lawmakers-backlash/index.html. Accessed on: 2022-01-06},
+	urldate         = {{2022-01-06}}
 }
 @misc{Paz2020,
 	title        = {{All the President's Lies About the Coronavirus}},
@@ -509,7 +510,7 @@ abstract = {I analyze the difference in the persistence of men and women after a
 	month        = 8,
 	publisher      = {St. Louis Fed: Economic Data},
         url = {https://fred.stlouisfed.org/series/UNRATE},
-	note         = {{Accessed on 2022-02-02}}
+	urldate         = {2022-02-02}
 }
 @article{andeweg2011pathways,
 	title        = {{Pathways to Party Unity: Sanctions, Loyalty, Homogeneity and Division of Labour in the Dutch Parliament}},
@@ -2205,9 +2206,8 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	author       = {Cook, Nancy and Choi, Matthew},
 	year         = 2020,
 	journal      = {Politico},
-	volume       = 28,
-        url = {https://www.politico.eu/article/trump-rallies-his-base-to-treat-coronavirus-as-a-hoax/},
-	note         = {{Accessed: 2022-06-01}}
+  url = {https://www.politico.eu/article/trump-rallies-his-base-to-treat-coronavirus-as-a-hoax/},
+	urldate         = {{2022-06-01}}
 }
 @article{copeland2001theory,
 	title        = {{Theory and History in the Study of Major War}},
@@ -3320,7 +3320,8 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	title        = {{Weightit: Weighting for Covariate Balance in Observational Studies}},
 	author       = {Noah Greifer},
 	year         = 2022,
-	note         = {{Available at: https://github.com/ngreifer/WeightIt. Accessed: 2022-06-02.}}
+	note         = {https://github.com/ngreifer/WeightIt}, 
+  urldate = {2022-06-02},
 }
 @article{grey2006,
 	title        = {{Numbers and Beyond: The Relevance of Critical Mass in Gender Research}},
@@ -4371,6 +4372,15 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	pages        = {1473--1490},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@article{clinton2021partisan,
+  title={Partisan pandemic: How partisanship and public health concerns affect individuals’ social mobility during COVID-19},
+  author={Clinton, Joshua and Cohen, Jon and Lapinski, John and Trussler, Marc},
+  journal={Science Advances},
+  volume={7},
+  number={2},
+  year={2021},
+  publisher={American Association for the Advancement of Science}
+}
 @article{kreps2020model,
 	title        = {{Model Uncertainty, Political Contestation, and Public Trust in Science: Evidence From the Covid-19 Pandemic}},
 	author       = {Kreps, Sarah E and Kriner, Douglas L},
@@ -4380,6 +4390,16 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	volume       = 6,
 	number       = 43,
 	pages        = {eabd4563}
+}
+@article{gollwitzer2020partisan,
+  title={Partisan differences in physical distancing are linked to health outcomes during the COVID-19 pandemic},
+  author={Gollwitzer, Anton and Martel, Cameron and Brady, William J and P{\"a}rnamets, Philip and Freedman, Isaac G and Knowles, Eric D and Van Bavel, Jay J},
+  journal={Nature Human Behaviour},
+  volume={4},
+  number={11},
+  pages={1186--1197},
+  year={2020},
+  publisher={Nature Publishing Group}
 }
 @article{kreps2020model,
 	title        = {{Model Uncertainty, Political Contestation, and Public Trust in Science: Evidence From the Covid-19 Pandemic}},
@@ -4949,14 +4969,14 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	number       = 1,
 	pages        = {107--127}
 }
-@misc{MarketWatch2022,
+@online{MarketWatch2022,
 	title        = {{DJIA: Dow Jones Industrial Average Overview}},
 	author       = {MarketWatch},
 	year         = 2022,
 	month        = 8,
 	journal      = {Dow Jones Industrial Average},
-	note         = {{Accessed: 2022-06-06}},
-        url         = {https://www.marketwatch.com/investing/index/djia}
+	urldate         = {2022-06-06},
+  url         = {https://www.marketwatch.com/investing/index/djia}
 }
 @misc{Martin2016,
 	title        = {{Benchmarking Widening Participation: How Should We Measure and Report Progress?}},
@@ -6981,8 +7001,9 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	author       = {NPR},
 	year         = 2022,
 	month        = 3,
-	journal      = {NPR},
-	note         = {{\textit{NPR}. Available at: https://www.npr.org/2022/03/01/1083845000/state-of-the-union-covid. Accessed on: 2022-02-02}}
+	publisher      = {NPR},
+  url = {https://www.npr.org/2022/03/01/1083845000/state-of-the-union-covid},
+  urldate = {2022-04-04},
 }
 @article{kertzer2022re,
 	title        = {Re-assessing elite-public gaps in political behavior},
@@ -7598,7 +7619,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	year         = 2022,
 	journal      = {GovTrack},
         url = {https://www.govtrack.us/covid-19},
-	note         = {{Accessed on: 2022-04-04}}
+	urldate         = {{2022-04-04}}
 }
 @article{xu2021individual,
 	title        = {{Individual Differences in Social Distancing and Mask-Wearing in the Pandemic of Covid-19: The Role of Need for Cognition, Self-Control and Risk Attitude}},
