--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7578,12 +7578,14 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	number       = 6,
 	pages        = {1407--1432}
 }
-@misc{Wolfe2020,
+@online{Wolfe2020,
 	title        = {{All of the times President Trump said Covid-19 will disappear}},
 	author       = {Daniel Wolfe and Daniel Dale},
 	year         = 2020,
 	month        = 10,
-	note         = {{\textit{CNN}. Available at: https://edition.cnn.com/interactive/2020/10/politics/covid-disappearing-trump-comment-tracker/. Accessed on: 2022-02-02.}}
+	publisher = {CNN}, 
+  url = {https://edition.cnn.com/interactive/2020/10/politics/covid-disappearing-trump-comment-tracker/},
+  urldate = {2022-02-02}
 }
 @book{Wooldridge2011,
 	title        = {{Econometric Analysis of Cross Section and Panel Data}},
