--- a/assets/references.bib
+++ b/assets/references.bib
@@ -828,6 +828,26 @@ abstract = {I analyze the difference in the persistence of men and women after a
 	number       = 1,
 	pages        = {76--91}
 }
+@article{doherty2016changing,
+  title={{When is changing policy positions costly for politicians? Experimental evidence}},
+  author={Doherty, David and Dowling, Conor M and Miller, Michael G},
+  journal={Political Behavior},
+  volume={38},
+  number={2},
+  pages={455--484},
+  year={2016},
+  publisher={Springer}
+}
+@article{andreottola2021flip,
+  title={Flip-flopping and electoral concerns},
+  author={Andreottola, Giovanni},
+  journal={The Journal of Politics},
+  volume={83},
+  number={4},
+  pages={1669--1680},
+  year={2021},
+  publisher={The University of Chicago Press Chicago, IL}
+}
 @article{barbera2015tweeting,
 	title        = {{Tweeting From Left to Right: Is Online Political Communication More Than an Echo Chamber?}},
 	author       = {Barber{\'a}, Pablo and Jost, John T and Nagler, Jonathan and Tucker, Joshua a and Bonneau, Richard},
@@ -2543,16 +2563,6 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	number       = 36,
 	pages        = {9587--9592}
 }
-@article{drummond2017individuals,
-	title        = {{Individuals With Greater Science Literacy and Education Have More Polarized Beliefs on Controversial Science Topics}},
-	author       = {Drummond, Caitlin and Fischhoff, Baruch},
-	year         = 2017,
-	journal      = {Proceedings of the National Academy of Sciences},
-	publisher    = {National Acad Sciences},
-	volume       = 114,
-	number       = 36,
-	pages        = {9587--9592}
-}
 @article{dryhurst2020risk,
 	title        = {{Risk Perceptions of Covid-19 Around the World}},
 	author       = {Dryhurst, Sarah and Schneider, Claudia R and Kerr, John and Freeman, Alexandra LJ and Recchia, Gabriel and Van Der Bles, Anne Marthe and Spiegelhalter, David and Van Der Linden, Sander},
@@ -3997,6 +4007,54 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	publisher    = {Wiley Online Library},
 	volume       = 36,
 	pages        = {1--43}
+}
+@article{ye2021exploring,
+  title={Exploring the relationship between political partisanship and COVID-19 vaccination rate},
+  author={Ye, Xinyuan},
+  journal={Journal of Public Health},
+  year={2021}
+}
+@article{altiparmakis2021pandemic,
+  title={Pandemic politics: policy evaluations of government responses to COVID-19},
+  author={Altiparmakis, Argyrios and Bojar, Abel and Brouard, Sylvain and Foucault, Martial and Kriesi, Hanspeter and Nadeau, Richard},
+  journal={West European Politics},
+  volume={44},
+  number={5-6},
+  pages={1159--1179},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
+
+@article{sommer2022pandemic,
+  title={Pandemic Politics in the United States: COVID-19 as a New Type of Political Emergency},
+  author={Sommer, Udi and Rappel-Kroyzer, Or},
+  journal={Political Psychology},
+  volume={43},
+  number={4},
+  pages={769--792},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{gollwitzer2020partisan,
+  title={Partisan differences in physical distancing are linked to health outcomes during the COVID-19 pandemic},
+  author={Gollwitzer, Anton and Martel, Cameron and Brady, William J and P{\"a}rnamets, Philip and Freedman, Isaac G and Knowles, Eric D and Van Bavel, Jay J},
+  journal={Nature Human Behaviour},
+  volume={4},
+  number={11},
+  pages={1186--1197},
+  year={2020},
+  publisher={Nature Publishing Group}
+}
+@article{druckman2021affective,
+  title={How affective polarization shapes Americans’ political beliefs: A study of response to the COVID-19 pandemic},
+  author={Druckman, James N and Klar, Samara and Krupnikov, Yanna and Levendusky, Matthew and Ryan, John Barry},
+  journal={Journal of Experimental Political Science},
+  volume={8},
+  number={3},
+  pages={223--234},
+  year={2021},
+  publisher={Cambridge University Press}
 }
 @article{kahan2015climate,
 	title        = {{Climate-Science Communication and the Measurement Problem}},
@@ -5568,54 +5626,6 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	journal      = {Psyarxiv},
 	volume       = 10,
 	pages        = {1--25}
-}
-@article{pennycook2020predictors,
-	title        = {{Predictors of Attitudes and Misperceptions About Covid-19 in Canada, the Uk, and the Usa}},
-	author       = {Pennycook, Gordon and McPhetres, Jonathon and Bago, Bence and Rand, David G},
-	year         = 2020,
-	journal      = {Psyarxiv},
-	volume       = 10,
-	pages        = {1--25}
-}
-@article{pennycook2022beliefs,
-	title        = {{Beliefs About Covid-19 in Canada, the United Kingdom, and the United States: A Novel Test of Political Polarization and Motivated Reasoning}},
-	author       = {Pennycook, Gordon and McPhetres, Jonathon and Bago, Bence and Rand, David G},
-	year         = 2022,
-	journal      = {Personality and Social Psychology Bulletin},
-	publisher    = {Sage Publications Sage CA: Los Angeles, CA},
-	volume       = 48,
-	number       = 5,
-	pages        = {750--765}
-}
-@article{pennycook2022beliefs,
-	title        = {{Beliefs About Covid-19 in Canada, the United Kingdom, and the United States: A Novel Test of Political Polarization and Motivated Reasoning}},
-	author       = {Pennycook, Gordon and McPhetres, Jonathon and Bago, Bence and Rand, David G},
-	year         = 2022,
-	journal      = {Personality and Social Psychology Bulletin},
-	publisher    = {Sage Publications Sage CA: Los Angeles, CA},
-	volume       = 48,
-	number       = 5,
-	pages        = {750--765}
-}
-@article{pennycook2022beliefs,
-	title        = {{Beliefs About Covid-19 in Canada, the United Kingdom, and the United States: A Novel Test of Political Polarization and Motivated Reasoning}},
-	author       = {Pennycook, Gordon and McPhetres, Jonathon and Bago, Bence and Rand, David G},
-	year         = 2022,
-	journal      = {Personality and Social Psychology Bulletin},
-	publisher    = {Sage Publications Sage CA: Los Angeles, CA},
-	volume       = 48,
-	number       = 5,
-	pages        = {750--765}
-}
-@article{pennycook2022beliefs,
-	title        = {{Beliefs About Covid-19 in Canada, the United Kingdom, and the United States: A Novel Test of Political Polarization and Motivated Reasoning}},
-	author       = {Pennycook, Gordon and McPhetres, Jonathon and Bago, Bence and Rand, David G},
-	year         = 2022,
-	journal      = {Personality and Social Psychology Bulletin},
-	publisher    = {Sage Publications Sage Ca: Los Angeles, Ca},
-	volume       = 48,
-	number       = 5,
-	pages        = {750--765}
 }
 @article{pennycook2022beliefs,
 	title        = {{Beliefs About Covid-19 in Canada, the United Kingdom, and the United States: A Novel Test of Political Polarization and Motivated Reasoning}},
@@ -7568,6 +7578,12 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	number       = 6,
 	pages        = {1407--1432}
 }
+@book{gadarian2022pandemic,
+  title={Pandemic Politics: The Deadly Toll of Partisanship in the Age of COVID},
+  author={Gadarian, Shana Kushner and Goodman, Sara Wallace and Pepinsky, Thomas B},
+  year={2022},
+  publisher={Princeton University Press}
+}
 @article{wlezien2012political,
 	title        = {{Political Institutions and the Opinion--Policy Link}},
 	author       = {Wlezien, Christopher and Soroka, Stuart N},
@@ -7577,6 +7593,26 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	volume       = 35,
 	number       = 6,
 	pages        = {1407--1432}
+}
+@article{gadarian2021partisanship,
+ author = {Gadarian, Shana Kushner and Goodman, Sara Wallace and Pepinsky, Thomas B},
+ journal = {Plos One},
+ number = {4},
+ pages = {e0249596},
+ publisher = {Public Library of Science San Francisco, CA USA},
+ title = {Partisanship, Health Behavior, and Policy Attitudes In the Early Stages of the Covid-19 Pandemic},
+ volume = {16},
+ year = {2021}
+}
+@article{sorace2021tale,
+  title={A tale of two peoples: motivated reasoning in the aftermath of the Brexit Vote},
+  author={Sorace, Miriam and Hobolt, Sara Binzer},
+  journal={Political Science Research and Methods},
+  volume={9},
+  number={4},
+  pages={675--692},
+  year={2021},
+  publisher={Cambridge University Press}
 }
 @online{Wolfe2020,
 	title        = {{All of the times President Trump said Covid-19 will disappear}},
