--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,22 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@book{gerber2011populist,
+  title={The populist paradox: Interest group influence and the promise of direct legislation},
+  author={Gerber, Elisabeth R},
+  year={2011},
+  publisher={Princeton University Press}
+}
+@article{garrett2015interest,
+  title={Interest group influence in policy diffusion networks},
+  author={Garrett, Kristin N and Jansa, Joshua M},
+  journal={State Politics \& Policy Quarterly},
+  volume={15},
+  number={3},
+  pages={387--417},
+  year={2015},
+  publisher={Cambridge University Press}
+}
 @online{Deane2021,
    author = {Claudia Deane and Kim Parker and John Gramlich},
    institution = {Pew Research Center},
