--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,22 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@article{dur2014public,
+  title={Public opinion and interest group influence: how citizen groups derailed the Anti-Counterfeiting Trade Agreement},
+  author={D{\"u}r, Andreas and Mateo, Gemma},
+  journal={Journal of European Public Policy},
+  volume={21},
+  number={8},
+  pages={1199--1217},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+@book{baumgartner2008decline,
+  title={The decline of the death penalty and the discovery of innocence},
+  author={Baumgartner, Frank R and De Boef, Suzanna L and Boydstun, Amber E},
+  year={2008},
+  publisher={Cambridge University Press}
+}
 @book{gerber2011populist,
   title={The populist paradox: Interest group influence and the promise of direct legislation},
   author={Gerber, Elisabeth R},
