--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,26 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@article{kluver2015legislative,
+  title={Legislative lobbying in context: towards a conceptual framework of interest group lobbying in the European Union},
+  author={Kl{\"u}ver, Heike and Braun, Caelesta and Beyers, Jan},
+  journal={Journal of European Public Policy},
+  volume={22},
+  number={4},
+  pages={447--461},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+@article{baumgartner2008forum,
+  title={Forum section: The two faces of framing: Individual-level framing and collective issue definition in the European Union},
+  author={Baumgartner, Frank R and Mahoney, Christine},
+  journal={European Union Politics},
+  volume={9},
+  number={3},
+  pages={435--449},
+  year={2008},
+  publisher={SAGE Publications Sage UK: London, England}
+}
 @article{dur2014public,
   title={Public opinion and interest group influence: how citizen groups derailed the Anti-Counterfeiting Trade Agreement},
   author={D{\"u}r, Andreas and Mateo, Gemma},
