--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,14 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@incollection{beyers2013policy,
+  title={Policy issues, organisational format and the political strategies of interest organisations},
+  author={Beyers, Jan},
+  booktitle={Interest group politics in Europe},
+  pages={86--109},
+  year={2013},
+  publisher={Routledge}
+}
 @article{kluver2015legislative,
   title={Legislative lobbying in context: towards a conceptual framework of interest group lobbying in the European Union},
   author={Kl{\"u}ver, Heike and Braun, Caelesta and Beyers, Jan},
