--- a/assets/references.bib
+++ b/assets/references.bib
@@ -3692,7 +3692,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	keywords     = {budget,competition,representation,responsiveness,speeches}
 }
 @article{hoehmann2022male,
-	title        = {{Male Mps, Electoral Vulnerability and the Substantive Representation of Women'S Interests}},
+	title        = {{Male MPs, Electoral Vulnerability and the Substantive Representation of Women's Interests}},
 	author       = {Hoehmann, Daniel and Nugent, Mary},
 	year         = 2022,
 	journal      = {European Journal of Political Research},
