--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7089,7 +7089,8 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	title        = {{Academic Research Product Track API}},
 	author       = {Twitter},
 	year         = 2021,
-	url         = {{https://developer.twitter.com/en/products/twitter-api/academic-research}}
+	url         = {https://developer.twitter.com/en/products/twitter-api/academic-research}, 
+        urldate = {2021-01-01}
 }
 @misc{UKConservativeParty2019,
 	title        = {{Conservative Party Manifesto 2019}},
