--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7350,7 +7350,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	author       = {Walgrave, Stefaan and Jansen, Arno and Sevenans, Julie and Soontjens, Karolin and Pilet, Jean-Benoit and Brack, Nathalie and Varone, Fr\'{e}d\'{e}ric and Helfer, Luzia and Vliegenthart, Rens and van der Meer, Toni and Breunig, Christian and Bailer, Stefanie and Sheffer, Lior and Loewen, Peter John},
 	year         = 2022,
 	journal      = {The Journal of Politics},
-	pages        = {https://doi.org/10.1086/722042},
+	pages        = {Forthcoming},
 	doi          = {10.1086/722042}
 }
 @misc{Walker2021,
