--- a/assets/references.bib
+++ b/assets/references.bib
@@ -4072,6 +4072,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
   title={Exploring the relationship between political partisanship and COVID-19 vaccination rate},
   author={Ye, Xinyuan},
   journal={Journal of Public Health},
+  pages = {Forthcoming},
   year={2021}
 }
 @article{altiparmakis2021pandemic,
