--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7749,7 +7749,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	url          = {https://orcid.org/0000-0003-2041-6671}
 }
 @article{Yildirim2021,
-	title        = {{Rethinking Women'S Interests: An Inductive and Intersectional Approach to Defining Women'S Policy Priorities}},
+	title        = {{Rethinking Women's Interests: An Inductive and Intersectional Approach to Defining Women'S Policy Priorities}},
 	author       = {Yildirim, Tevfik Murat},
 	year         = 2022,
 	journal      = {British Journal of Political Science},
@@ -7773,11 +7773,12 @@ author = {David S. Lee},
 keywords = {Regression discontinuity, Randomized experiments, Average treatment effects, Elections, Incumbency},
 }
 
-@misc{YouGov2021,
+@online{YouGov2021,
   author = {{YouGov}},
   title = {{YouGov Ratings: Politics | Popularity | Charities \& Organisations | All}},
   year = 2023,
-  url = {https://yougov.co.uk/ratings/politics/popularity/charities-organisations/all}
+  url = {https://yougov.co.uk/ratings/politics/popularity/charities-organisations/all},
+  urldate = {2020-08-08}
 }
 
 @misc{YouGov2021c,
