--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,22 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@article{huddy2001social,
+  title={From social to political identity: A critical examination of social identity theory},
+  author={Huddy, Leonie},
+  journal={Political Psychology},
+  volume={22},
+  number={1},
+  pages={127--156},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+@book{hogg2016social,
+  title={Social identity theory},
+  author={Hogg, Michael A},
+  year={2016},
+  publisher={Springer}
+}
 @incollection{beyers2013policy,
   title={Policy issues, organisational format and the political strategies of interest organisations},
   author={Beyers, Jan},
