--- a/assets/references.bib
+++ b/assets/references.bib
@@ -7,6 +7,16 @@
 	pages        = {99--108},
 	mendeley-groups = {responsiveness\_affluent}
 }
+@article{sevenans2015political,
+  title={Political elites’ media responsiveness and their individual political goals: A study of national politicians in Belgium},
+  author={Sevenans, Julie and Walgrave, Stefaan and Vos, Debby},
+  journal={Research \& Politics},
+  volume={2},
+  number={3},
+  pages={2053168015593307},
+  year={2015},
+  publisher={SAGE Publications Sage UK: London, England}
+}
 @article{huddy2001social,
   title={From social to political identity: A critical examination of social identity theory},
   author={Huddy, Leonie},
