--- a/assets/references.bib
+++ b/assets/references.bib
@@ -5369,12 +5369,12 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 	year         = 2007,
 	journal      = {Princeton, Nj: Gallup News Service}
 }
-@misc{News2020,
+@online{News2020,
 	title        = {{Government Defends Allowing Construction Work to Continue During Coronavirus Lockdown}},
-	author       = {News, ITV},
+	author       = {ITV News},
 	year         = 2020,
-	booktitle    = {ITV News},
-	mendeley-groups = {who\_leads}
+        url = {https://www.itv.com/news/2020-03-24/construction-workers-fear-catching-coronavirus-on-building-sites},
+        urldate = {2021-08-08}
 }
 @inproceedings{nguyenbertweet,
 	title        = {{Bert}Weet: A Pre-Trained Language Model for {E}Nglish Tweets},
