--- a/assets/references.bib
+++ b/assets/references.bib
@@ -5371,7 +5371,7 @@ url = {https://huggingface.co/z-dickson/CAP_multilingual},
 }
 @online{News2020,
 	title        = {{Government Defends Allowing Construction Work to Continue During Coronavirus Lockdown}},
-	author       = {ITV News},
+	author       = {ITV},
 	year         = 2020,
         url = {https://www.itv.com/news/2020-03-24/construction-workers-fear-catching-coronavirus-on-building-sites},
         urldate = {2021-08-08}
