--- a/assets/references.bib
+++ b/assets/references.bib
@@ -1,5 +1,5 @@
 @article{Abou-Chadi2018a,
-	title        = {{Electoral competition, political risks, and parties' responsiveness to voters' issue priorities}},
+	title        = {{Electoral Competition, Political Risks, and Parties' Responsiveness to Voters' Issue Priorities}},
 	author       = {Abou-Chadi, Tarik},
 	year         = 2018,
 	journal      = {Electoral Studies},
